--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,2 +1,13 @@
-﻿  on:
-  jobs:
+﻿name: "Dotnet CI"
+on:
+  push:
+    branches: ["main"]
+  pull_request:
+    branches: ["main"]
+
+jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
