--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -2,4 +2,27 @@
   <PropertyGroup>
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageVersion Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageVersion Include="Dapper" Version="2.1.4" />
+    <PackageVersion Include="Dapper.SqlBuilder" Version="2.0.78" />
+    <PackageVersion Include="Elastic.Clients.Elasticsearch" Version="8.10.0" />
+    <PackageVersion Include="Elasticstretch.DependencyInjection" Version="1.1.2" />
+    <PackageVersion Include="FluentValidation" Version="11.7.1" />
+    <PackageVersion Include="FluentValidation.DependencyInjectionExtensions" Version="11.7.1" />
+    <PackageVersion Include="Hangfire" Version="1.8.5" />
+    <PackageVersion Include="KafkaFlow" Version="2.4.1" />
+    <PackageVersion Include="KafkaFlow.LogHandler.Console" Version="2.4.1" />
+    <PackageVersion Include="KafkaFlow.Microsoft.DependencyInjection" Version="2.4.1" />
+    <PackageVersion Include="KafkaFlow.Retry" Version="2.1.2" />
+    <PackageVersion Include="KafkaFlow.Serializer.ProtobufNet" Version="2.4.1" />
+    <PackageVersion Include="KafkaFlow.TypedHandler" Version="2.4.1" />
+    <PackageVersion Include="MediatR" Version="12.1.1" />
+    <PackageVersion Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="7.0.11" />
+    <PackageVersion Include="Serilog" Version="3.0.1" />
+    <PackageVersion Include="Serilog.Extensions.Logging" Version="7.0.0" />
+    <PackageVersion Include="Serilog.Sinks.Console" Version="4.1.0" />
+    <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageVersion Include="Swashbuckle.AspNetCore.Swagger" Version="6.5.0" />
+  </ItemGroup>
 </Project>
